--- a/pelis/templates/includes/pagination.html
+++ b/pelis/templates/includes/pagination.html
@@ -17,7 +17,7 @@
                     <a class="page-link">{{ i }}</a>
               </li>
             {% else %}
-              <li class="page-item"><a href="?page={{ query_string|urlencode }}&amp;page={{ i }}" class="page-link">{{ i }}</a></li>
+              <li class="page-item"><a href="?{{ query_string }}&amp;page={{ i }}" class="page-link">{{ i }}</a></li>
             {% endif %}
           {% endfor %}
 
