--- a/pelis/templates/pelis/pelis_index_page.html
+++ b/pelis/templates/pelis/pelis_index_page.html
@@ -7,6 +7,8 @@
 {% block content %}
 <div class="container">
     <h1>{{ page.title }}</h1>
+    
+    *{{ direccion }}  *  {{ query_string }} *
 <hr>
 <p><a href="?decada=90">Década de los 90</a></p>
 <hr>
