--- a/pelis/templates/pelis/pelis_index_page.html
+++ b/pelis/templates/pelis/pelis_index_page.html
@@ -3,6 +3,9 @@
 {% load wagtailcore_tags %}
 
 {% block body_class %}template-blogindexpage{% endblock %}
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.11.4/css/jquery.dataTables.min.css">
+{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -13,26 +16,32 @@
 <p><a href="?decada=90">Década de los 90</a></p>
 <p><a href="?genero=drama">Drama</a></p>
 <hr>
-    <ul class="list-group">
-    {% for peli in peliculas %}
-    <li class="list-group-item">{{peli.title}}</li>
-    
-    {% empty %}
-    <p>No hay posts todavía ... </p>
-    {% endfor %}
-</ul>
 
-{% if peliculas.paginator.count > 1 %}
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                {% include "includes/pagination.html" with subpages=peliculas %}
-                </div>
-            </div>
-        </div>
-    {% endif %}
+<table id="peliculas">
+<thead><tr><th>Título</th><th>Año</th><th>Género</th><th></th></tr></thead>
+<tbody>
+{% for peli in peliculas %}
+<tr><td>{{peli.title}}</td><td>{{peli.year}}</td><td>{{peli.generosstr}}</td><td><img src="{{peli.imagen}}" alt="{{peli.title}}"></td></tr>
+{% endfor%}
+</tbody>
+</table>
+
 </div>
 
+{% endblock %}
 
 
+{% block extra_js %}
+<script type="text/javascript" src="//cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js">
+</script>
+
+<script>
+$(document).ready( function () {
+    $('#peliculas').DataTable({
+        language: {
+            url: '//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json'
+        }
+    });
+} );
+</script>
 {% endblock %}
