--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -31,7 +31,7 @@
     <div class="row">
     {% for item in page.gallery_images.all %}
     <div class="col-md-3">
-        {% image item.image fill-320x240 %}
+        {% image item.image original %}
         <p>{{ item.caption }}</p>
     </div>
     {% endfor %}
