--- a/blogclase/templates/base.html
+++ b/blogclase/templates/base.html
@@ -27,9 +27,17 @@
 
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
+        {% include 'components/navbar.html' %}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% block content %}{% endblock %}
+                </div>
+                {% include 'components/sidebar.html' %}
+            </div>
+        </div>
 
-        {% block content %}{% endblock %}
-
+        {% include 'components/footer.html' %}
         {# Global javascript #}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
