--- a/pelis/templates/pelis/pelis_index_page.html
+++ b/pelis/templates/pelis/pelis_index_page.html
@@ -4,23 +4,28 @@
 
 {% block body_class %}template-blogindexpage{% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.11.4/css/jquery.dataTables.min.css">
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <h1>{{ page.title }}</h1>
 <hr>
-<p><a href="?decada=90">Década de los 90</a></p>
-<p><a href="?genero=drama">Drama</a></p>
-<hr>
-    <ul class="list-group">
-    {% for peli in peliculas %}
-    <li class="list-group-item">{{peli.title}}</li>
-    
-    {% empty %}
-    <p>No hay posts todavía ... </p>
-    {% endfor %}
-</ul>
-
-{% if peliculas.paginator.count > 1 %}
+<!--<p><a href="?decada=90">Década de los 90</a></p>-->
+    <table id="peliculas">
+        <thead>
+            <tr><td>Título</td><td>Año</td><td>Posición</td><td>Género</td><td>Imagen</td></tr>
+        </thead>
+        <tbody>
+        {% for peli in peliculas %}
+        <tr><td>{{peli.title}}</td><td>{{peli.year}}</td>
+        <td>{{peli.place}}</td><td>{{peli.generos_str}}</td>
+        <td><img src="{{peli.imagen}}" alt="{{peli.title}}"></td></tr>
+        {% endfor %}
+</tbody>
+</table>
+<!--{% if peliculas.paginator.count > 1 %}
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -28,6 +33,17 @@
                 </div>
             </div>
         </div>
-    {% endif %}
+    {% endif %}-->
+    <p><a href="{{ page.get_parent.url }}">Volver al blog</a></p>
 </div>
+
+{% endblock %}
+{% block extra_js %}
+<script type="text/javascript" src="//code.jquery.com/jquery-3.6.0.min.js"></script>
+<script type="text/javascript" src="//cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+<script> 
+$(document).ready( function () {
+    $('#peliculas').DataTable();
+} );
+</script>
 {% endblock %}
