--- a/blogclase/templates/components/navbar.html
+++ b/blogclase/templates/components/navbar.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="/listado">Películas</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Viajes</a>
+        <a class="nav-link" href="/viajes">Viajes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/contacto">Contacto</a>
