Leaflet terminado y ajuste de la página con coordenadas, creación de la aplicación deportes

--- a/blogclase/templates/components/navbar.html
+++ b/blogclase/templates/components/navbar.html
@@ -1,8 +1,4 @@
-<style>
-  .nav-item {
-    padding-left:150px;
-  }
-</style>
+
 <nav class="mb-2 navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -13,7 +9,7 @@
         <a class="nav-link" href="/noticias">Noticias</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Deportes</a>
+        <a class="nav-link" href="/deportes">Deportes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/listado">Películas</a>
@@ -24,10 +20,6 @@
       <li class="nav-item">
         <a class="nav-link" href="/contacto">Contacto</a>
       </li>
-      <form class="d-flex" style="padding-left: 150px;">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
         </div>
       <div class="collapse navbar-collapse" id="navbarResponsive">
     </div>
